jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_AbreGaveta(const INTPTR ecfHandle);

DllImport int ECF_AcharECF(const INTPTR ecfHandle, const BOOL Modelo, const BOOL Porta, const int TimeOut);

DllImport int ECF_Ativar(const INTPTR ecfHandle);

DllImport int ECF_CorrigeEstadoErro(const INTPTR ecfHandle, const BOOL reducaoZ);

DllImport int ECF_Desativar(const INTPTR ecfHandle);

DllImport int ECF_GetArredonda(const INTPTR ecfHandle);

DllImport int ECF_GetChequePronto(const INTPTR ecfHandle);

DllImport int ECF_GetEstado(const INTPTR ecfHandle);

DllImport int ECF_GetGavetaAberta(const INTPTR ecfHandle);

DllImport int ECF_GetHorarioVerao(const INTPTR ecfHandle);

DllImport int ECF_GetIdentificaConsumidorRodape(const INTPTR ecfHandle);

DllImport int ECF_GetMFAdicional(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetMFD(const INTPTR ecfHandle);

DllImport int ECF_GetParamDescontoISSQN(const INTPTR ecfHandle);

DllImport int ECF_GetPoucoPapel(const INTPTR ecfHandle);

DllImport int ECF_GetSubTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTermica(const INTPTR ecfHandle);

DllImport int ECF_GetTotalPago(const INTPTR ecfHandle, double* value);

DllImport int ECF_MudaArredondamento(const INTPTR ecfHandle, const BOOL arredonda);

DllImport int ECF_MudaHorarioVerao(const INTPTR ecfHandle);

DllImport int ECF_PreparaTEF(const INTPTR ecfHandle);

DllImport int ECF_Sangria(const INTPTR ecfHandle, const double valor, const PCHAR obs, const PCHAR DescricaoCNF, const PCHAR DescricaoFPG, const int indicebmp);

DllImport int ECF_Suprimento(const INTPTR ecfHandle, const double valor, const PCHAR obs, const PCHAR DescricaoCNF, const PCHAR DescricaoFPG, const int indicebmp);

DllImport int ECF_TestaPodeAbrirCupom(const INTPTR ecfHandle);